<resources>
    <string name="app_name">Nayati</string>

    <string name="app_copy">Copyright 2015, Ananya Jyoti Applications.</string>

    <string name="blank_string"></string>

    <string name="main_actionbar_title">nayati</string>

    <string name="action_settings">Settings</string>
    <string name="main_menu_config">Config</string>

    <string name="msg_db_created">Database created.</string>
    <string name="msg_db_already">Database found.</string>
    <string name="msg_db_failure">Database not found.</string>

    <string name="title_activity_item_add">Add an item</string>
    <string name="title_activity_item_edit">Edit an item</string>

    <string name="item_add_hint_track_num">Tracking Number</string>
    <string name="item_add_hint_name">Item Name</string>
    <string name="item_add_hint_category">Item Category</string>
    <string name="item_add_hint_add">Add</string>
    <string name="item_add_hint_update">Update</string>

    <string name="item_add_success">Item added.</string>
    <string name="item_add_failure">Unable to add item.</string>

    <string name="item_update_success">Item updated.</string>
    <string name="item_update_failure">Unable to update item.</string>

    <string name="msg_empty_track_num">Tracking number is empty</string>
    <string name="msg_empty_item_name">Item name is empty</string>
    <string name="msg_track_num_format">Check tracking number.</string>

    <string name="title_activity_item_list">View items</string>

    <string name="item_list_track_num">TRACKING NUMBER</string>
    <string name="item_list_name">ITEM NAME</string>
    <string name="item_list_category">C</string>

    <string name="title_activity_item_detail">View Item Details</string>

    <string name="item_detail_label_date">Date</string>
    <string name="item_detail_label_country">Country</string>
    <string name="item_detail_label_cloc">Current Location</string>
    <string name="item_detail_label_event">Event</string>
    <string name="item_detail_label_nloc">Next Location</string>
    <string name="item_detail_label_mcat">Mail Category</string>
    <string name="item_detail_empty">"EMPTY"</string>

    <string name="item_detail_menu_refresh">Refresh</string>
    <string name="item_detail_menu_delete">Delete</string>

    <string name="msg_refresh_wait">Too soon for a refresh&#8230;</string>
    <string name="msg_refresh_info">Received status information</string>
    <string name="msg_refresh_no_info">No status information&#8230; as yet</string>
    <string name="msg_no_internet">No internet connection</string>
    <string name="msg_already_delivered">Package already delivered</string>

    <string name="dialog_delete_title">Confirm Deletion</string>
    <string name="dialog_delete_message">Do you really want to delete this item?</string>

    <string name="desc_postal_service">Postal service logo</string>
    <string name="desc_item_state">Item state</string>
    <string name="desc_item_origin">Country of origin</string>

    <string name="desc_main_info">Application information</string>
    <string name="desc_main_logo">Application logo</string>

</resources>
