<!--
  ~ [Nayati] fragment_item_detail.xml
  ~
  ~ Describes layout of fragment associated with ItemDetailActivity.
  ~
  ~ (c) 2015 Sanjeev Premi (spremi@ymail.com)
  ~
  ~ SPDX-License-Identifier: BSD-3-Clause
  ~                          (http://spdx.org/licenses/BSD-3-Clause.html)
  ~
  -->


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/bgWindow"
    tools:context="self.premi.sanjeev.nayati.ItemDetailActivityFragment"
    tools:showIn="@layout/activity_item_detail"
    android:weightSum="1.0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp">

        <!-- Item Category -->
        <TextView
            android:id="@+id/item_detail_text_category"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:gravity="center_vertical|center_horizontal"
            android:background="@color/bgDetailCategory"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/fgDetailCategory"
            android:text="@string/blank_string" />

        <!-- Tracking number & Item name -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_marginLeft="8dp">

            <TextView
                android:id="@+id/item_detail_text_track_num"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/fgDetailTitle"
                android:text="@string/item_list_track_num" />

            <TextView
                android:id="@+id/item_detail_text_track_name"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/fgDetailTitle"
                android:text="@string/item_list_name" />

        </LinearLayout>

        <!-- Service logo -->
        <ImageView
            android:id="@+id/item_detail_image_post"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:gravity="center_vertical|center_horizontal"
            android:contentDescription="@string/desc_postal_service" />

        <!-- Status -->
        <ImageView
            android:id="@+id/item_detail_status"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="4dp"
            android:layout_gravity="center_vertical|right"
            android:contentDescription="@string/desc_item_state" />

        <!-- Country of origin -->
        <ImageView
            android:id="@+id/item_detail_flag"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="4dp"
            android:gravity="center_vertical|right"
            android:contentDescription="@string/desc_item_origin" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_item_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>

</LinearLayout>
